# Advent-Of-Code

./: .gitignore  CMakeLists.txt  CNAME  README.md  advent.h  main.cpp  matrix.hpp  timing.hpp  vcpkg.json
data/: test.txt
day01/: day01.cpp  day01_day1  day1.cpp
day02/: day02.cpp  day02_day2  day2.cpp
day03/: day03.cpp  day03_day3  day3.cpp
day04/: day04.cpp  day04_day4  day4.cpp
day05/: day05.cpp  day05_day5  day5.cpp
day06/: day06.cpp  day06_day6  day6.cpp
day07/: day07_day7  day7.cpp
day08/: day08_day8  day8.cpp
day09/: day9.cpp  day9out.txt
day1/: day1.cpp
day10/: day10.cpp
day10/output/: day10
day11/: day11.cpp
day11/output/: day11
day12/: day12  day12.cpp
day12/output/: day12
day13/: data.txt  day13.cpp
day13/output/: day13
day14/: day14.cpp
day14/output/: day14
day15/: calculus.cpp  day15.cpp
day16/: day16.cpp  day16_day16
day17/: day17.cpp  day17_day17
day18/: day18.cpp  day18_day18
day3/: day3.cpp
day4/: day4.cpp
day5/: day5.cpp
day6/: day6.cpp  matrix.hpp
day7/: day7.cpp
day9/: day9.cpp
src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  src.h
